Fix bleeding portfolio content
Still need to fix it on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,14 @@ section.resume .content{
 #section-projects {
     display: none;
     color: white;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    scrollbar-color: var(--accent-color) transparent;
+    scrollbar-width: thin;
+    padding: var(--nav-height) 0;
+    background-color: #211951;
 }
 #section-projects h2,
 #section-projects hr {
@@ -186,25 +194,22 @@ section.resume .content{
     left: 0;
     right: 0;*/
     display: flex;
-    width: 100%;
-    height: 100%;
-    padding: var(--nav-height) 0;
-    
-    overflow-y: auto;
+    /*width: 100%;
+    height: 100vh;*/
+    /*padding: var(--nav-height) 0;*/
+    /*
+    overflow-y: hidden;
     scroll-behavior: smooth;
     scrollbar-color: var(--accent-color) transparent;
-    scrollbar-width: thin;
+    scrollbar-width: thin;*/
 
     transition: transform 0.5s ease;
     transform: translate(-100%, 0);
-
-    background-color: #211951;
     /*z-index: 15;*/
 }
 #section-projects.active {
     transition: transform 0.5s ease;
     transform: translate(0, 0);
-    background-color: #211951;
 }
 #section-projects .card {
     border: 1px solid var(--accent-color)
